# An-End-to-End-Semantic-AI-System-for-Automated-Support-Ticket-Handling

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
IEEE_Paper_Submission/: CHECKLIST.md  README.md  TEAM_DETAILS.md  ieee_paper_v3.tex
backend/: analytics.py  database.py  main.py
data/db/: tickets.db
docs/: HOW_TO_RUN.md
frontend/: build_log.txt  build_log_2.txt  build_log_3.txt  build_log_final.txt  package-lock.json  package.json  show_filters.js  tailwind.config.js  test_workflow.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  DataTableView.jsx  Layout.jsx  PredictionResult.jsx  ReportingPage.jsx  TicketForm.jsx
frontend/src/services/: api.js
frontend/tests/e2e/: test_all_features.js  verify_backend_connection.js  visual_audit.js  visual_audit_fast.js  visual_debug.js
ml_engine/: inference.py
models/category_classifier/: config.json
models/resolution_time_predictor/: config.json
models/team_priority_classifier/: config.json
notebooks/: 01_data_preparation.ipynb  02_ticket_classification.ipynb  03_team_priority_prediction.ipynb  04_resolution_time_estimation.ipynb  05_action_retrieval_system.ipynb  action_classifier_advanced.ipynb  action_classifier_baseline.ipynb  action_classifier_semantic.ipynb  action_prediction_ml.ipynb  data_augmentation_rag.ipynb  experiment_generic_vs_rag.ipynb  final_hybrid_system.ipynb  models.ipynb
notebooks/data/: dataset.ipynb
